--- a/medmonics/.env
+++ b/medmonics/.env
@@ -2,5 +2,5 @@ JWT_SECRET=s3cr3t@JWT!r@nd0mS#tr1ng
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=medicalmnemonics
-DB_PASSWORD=123
+DB_PASSWORD=JEDI
 DB_PORT=5432
